Fix Issue #90: Remove "text-align: right" from ".panel > ul, .panel > fieldset" and ".panel > ul li, .row"

--- a/web-app/iui/iui.css
+++ b/web-app/iui/iui.css
@@ -271,7 +271,6 @@ body > .panel {
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border: 1px solid #999999;
-    text-align: right;
     font-size: 16px;
 }
 
@@ -282,7 +281,6 @@ body > .panel {
     border-bottom: 1px solid #999999;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
-    text-align: right;
 }
 
 .panel > ul li:last-child,
